# FineTeX

./: .ghc.environment.x86_64-mingw32-8.6.5  .gitignore  Generator.hs  LICENSE  LaTeX-generator.cabal  Main.hs  README.md  finetex.cabal  hie.yaml  out.txt  out2.txt  outp.txt  tmp  tmp.hs
.github/workflows/: deploy.yml  haskell.yml  release-bot.yml  test-texgen.yml
app/: IOUtils.hs  Main.hs
debug/: Dbg.hs
examples/: copy.ttex  example.fine  example.tex  example.ttex  math-primitives.fine  nibergall.fine  nibergall.tex  nibergall.ttex  std.fine  std.htex  std.ttex
examples/examples-from-wiki/: hello.tex  hello.ttex
examples/examples-from-wiki/environments/: foo-bar-baz.tex  foo-bar-baz.ttex  math.tex  math.ttex  verb.tex  verb.ttex  with-args.tex  with-args.ttex
examples/examples-from-wiki/math-commands/: cmds.tex  cmds.ttex  unicode.tex  unicode.ttex
examples/examples-from-wiki/paragraphs/: inline-math.tex  inline-math.ttex  pars.tex  pars.ttex
examples/examples-from-wiki/prefs/: args.tex  args.ttex  itemize.tex  itemize.ttex  math-args.tex  math-args.ttex  nogroup-oneline.tex  nogroup-oneline.ttex  sep-align.tex  sep-align.ttex  split-empty-line.tex  split-empty-line.ttex
src/: Generator.hs  IOUtils.hs  Main.hs  OptParser.hs  Parser.hs  Printer.hs  Printing.hs  Processor.hs  Utils.hs
src/FineTeX/: FineTeX.hs  Printer.hs  Utils.hs
src/FineTeX/Dbg/: MonadParsecDbg.hs
src/FineTeX/Parser/: Body.hs  Definitions.hs  OptParser.hs  Syntax.hs  Utils.hs
src/FineTeX/Processor/: Body.hs  Definitions.hs  Syntax.hs  Tokenizer.hs  Utils.hs
test/: Spec.hs
test/Parser/: Body.hs  Definitions.hs
test/Processor/: Body.hs
tests/: nibergal.tex
