cabal-version:       3.0
name:                finetex
version:             0.1.0.0
synopsis:            FineTeX is a simple lang for math document preparation 
                     translatated into LaTeX
-- description:
homepage:            https://github.com/Lev135/FineTeX
bug-reports:         https://github.com/Lev135/FineTeX/issues

license:             MIT
license-file:        LICENSE
author:              Lev135
maintainer:          lev_135@mail.ru

category:            Math
extra-source-files:  README.md

common basics
  build-depends:      base
  other-modules:      Paths_finetex
  default-language:   Haskell2010
  
  default-extensions: OverloadedStrings
                      NamedFieldPuns
                      DuplicateRecordFields
                      TupleSections
                      LambdaCase
                      FlexibleContexts
                      ScopedTypeVariables
                      ConstraintKinds
                      RankNTypes
                      OverloadedLabels
                      DataKinds
                      FlexibleInstances
                      MultiParamTypeClasses
                      PartialTypeSignatures
                      DeriveGeneric

  ghc-options:        -Wall
                      -Wcompat
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wredundant-constraints
                      -Wmissing-exported-signatures
                      -Wno-name-shadowing
                      -Wno-unused-do-bind

common exe
  build-depends:      finetex

common lib
  build-depends:    text
                  , megaparsec
                  , mtl
                  , exceptions
                  , extra
                  , prettyprinter
                  , containers
                  , lens
                  , generic-lens
                  , template-haskell
                  , parser-combinators
                  , safe

common repl
  import:           lib

  other-modules:    FineTeX.Utils
                    FineTeX.Printer
                    FineTeX.FineTeX

                    FineTeX.Parser.Body
                    FineTeX.Parser.Definitions
                    FineTeX.Parser.OptParser
                    FineTeX.Parser.Utils
                    FineTeX.Parser.Syntax

                    FineTeX.Processor.Body
                    FineTeX.Processor.Definitions
                    FineTeX.Processor.Utils
                    FineTeX.Processor.Syntax
                    FineTeX.Processor.Tokenizer

                    FineTeX.Dbg.MonadParsecDbg


library
  import:           basics, lib
  hs-source-dirs:   src
  
  exposed-modules:  FineTeX.Utils
                    FineTeX.Printer
                    FineTeX.FineTeX

                    FineTeX.Parser.Body
                    FineTeX.Parser.Definitions
                    FineTeX.Parser.OptParser
                    FineTeX.Parser.Utils
                    FineTeX.Parser.Syntax

                    FineTeX.Processor.Body
                    FineTeX.Processor.Definitions
                    FineTeX.Processor.Utils
                    FineTeX.Processor.Syntax
                    FineTeX.Processor.Tokenizer

                    FineTeX.Dbg.MonadParsecDbg

  

executable texgen
  import:           basics, exe
  hs-source-dirs:   app
  main-is:          Main.hs
  
  other-modules:    IOUtils

  build-depends:    text
                  , containers
                  , mtl
                  , extra
                  , optparse-applicative
                  , filepath
                  , pretty-simple
                  
  if os(windows)
    build-depends:  Win32

  ghc-options:      -O3 -threaded

executable texgen-repl
  import:           basics, repl
  hs-source-dirs:   app, src, debug
  main-is:          Main.hs

  other-modules:    IOUtils

                    Dbg

  
  build-depends:    optparse-applicative
                  , filepath
                  , pretty-simple

  if os(windows)
    build-depends:  Win32

test-suite finetex-test
  import:           basics
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  
  other-modules:    Parser.Definitions
                    Parser.Body

                    Processor.Body
                    

  build-depends:    finetex
                  , hspec
                  , hspec-megaparsec
                  , megaparsec
                  , text
                  , raw-strings-qq
                  , mtl
                  , containers
                  
executable test-repl
  import:           basics, repl
  hs-source-dirs:   src, test
  main-is:          Spec.hs

  other-modules:    Parser.Definitions
                    Parser.Body

                    Processor.Body
                      
  build-depends:    hspec
                  , hspec-megaparsec
                  , megaparsec
                  , raw-strings-qq
  